<resources>
    <string name="app_name">PayBuddy</string>
    <string name="welcome">Welcome to PayBuddy</string>
    <string name="action_sign_in_short">Register</string>
    <string name="email">Email</string>
    <string name="account">Account Settings</string>
    <string name="minimum_password">Password too short, enter minimum 6 characters!</string>
    <string name="auth_failed">Authentication failed, check your email and password or sign up</string>
    <string name="change_email">Change Email</string>
    <string name="change_password">Change Password</string>
    <string name="send_password_reset_email">Send Password reset email</string>
    <string name="remove_user">Remove user</string>
    <string name="new_pass">New Password</string>
    <string name="title_activity_profile">Firebase</string>
    <string name="title_activity_login">Sign in</string>
    <string name="hint_email">Email</string>
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">LOGIN</string>
    <string name="prompt_password">Please enter your password</string>
    <string name="btn_link_to_register">Register</string>
    <string name="btn_link_to_login">Already registered. Login Me!</string>
    <string name="title_activity_reset_password">ResetPasswordActivity</string>
    <string name="btn_forgot_password">Forgot your password?</string>
    <string name="btn_reset_password">Reset Password</string>
    <string name="btn_back"><![CDATA[<< Back]]></string>
    <string name="hint_new_email">New Email</string>
    <string name="btn_change">Change</string>
    <string name="btn_send">Send</string>
    <string name="btn_remove">Remove</string>
    <string name="btn_sign_out">Sign Out</string>
    <string name="logout">Successfully Loged Out</string>
    <string name="lbl_forgot_password">Forgot password?</string>
    <string name="forgot_password_msg">We just need your registered Email Id to sent you password reset instructions.</string>
    <string name="email_id">Email ID</string>
    <string name="cvv">CVV</string>
    <string name="cardnum">Card Number</string>
    <string name="date">mm/yy</string>
    <string name="cardname">Card Name</string>
    <string name="save">Save</string>
    <array name="cardtype">
        <item>Credit Card</item>
        <item>Debit Card
        </item>
        <item>Gift Card</item>
    </array>
    <string name="addcard">Add Card</string>
    <string name="View">View Card</string>
    <string name="Send">Send Money</string>
</resources>
