<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.prash.paybuddy.SavingCard">


    <EditText
        android:id="@+id/card_name"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="36dp"
        android:ems="10"
        android:hint="@string/cardname"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/cvv"
        android:layout_width="120dp"
        android:layout_height="wrap_content"
        android:layout_below="@+id/card_num"
        android:layout_toEndOf="@+id/date"
        android:ems="10"
        android:hint="@string/cvv"
        android:inputType="numberPassword"
        tools:ignore="UnknownId" />

    <EditText
        android:id="@+id/card_num"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignEnd="@+id/card_name"
        android:layout_alignStart="@+id/card_name"
        android:layout_below="@+id/card_name"
        android:layout_marginTop="15dp"
        android:ems="10"
        android:hint="@string/cardnum"
        android:inputType="textPersonName" />

    <EditText
        android:id="@+id/date"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/card_num"
        android:layout_below="@+id/card_num"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date" />

    <Spinner
        android:id="@+id/cardtype"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/date"
        android:layout_marginTop="16dp"
        android:entries="@array/cardtype" />

    <Button
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:background="@drawable/shadow"
        android:elevation="5dp"
        android:text="@string/save" />
</RelativeLayout>
