<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="com.example.prash.paybuddy.AccountActivity.save_pay">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:elevation="10dp">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/btn_login_bg">

            <TextView
                android:layout_width="300dp"
                android:layout_height="100dp"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="85dp"
                android:fontFamily="cursive"
                android:text="@string/welcome"
                android:textAlignment="center"
                android:textAppearance="@style/TextAppearance.AppCompat"
                android:textColor="@color/bg_main"
                android:textColorHighlight="@color/colorPrimary"
                android:textSize="36sp"
                android:textStyle="italic"
                android:id="@+id/textView"
                android:shadowColor="@color/colorPrimaryDark"
                android:shadowDx="2"
                android:shadowDy="3"
                android:shadowRadius="2"/>


            <Button
                android:id="@+id/add"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerInParent="true"
                android:layout_marginTop="199dp"
                android:backgroundTint="@color/btn_login"
                android:text="@string/addcard"
                android:textStyle="italic"
                android:textAllCaps="false"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="312dp" />

            <Button
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/add"
                android:layout_centerInParent="true"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/btn_login"
                android:text="@string/View"
                tools:layout_editor_absoluteX="42dp"
                tools:layout_editor_absoluteY="312dp"
                android:textStyle="italic"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/send_money"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:layout_below="@+id/view"
                android:text="@string/Send"
                android:layout_centerHorizontal="true"
                android:backgroundTint="@color/btn_login"
                android:textStyle="italic"
                android:textAllCaps="false"/>

            <Button
                android:id="@+id/acc_settings"
                android:layout_width="45dp"
                android:layout_height="50dp"
                android:layout_alignParentBottom="true"
                android:layout_alignParentEnd="true"
                android:layout_marginBottom="18dp"
                android:layout_marginEnd="12dp"
                android:backgroundTint="@color/btn_login_bg"
                android:drawableBottom="@drawable/settings" />

        </RelativeLayout>
    </android.support.v7.widget.CardView>



</RelativeLayout>
